test/trivial/deitz/vars-scopes/infer1.good
infer1.chpl:1: In function 'main':
infer1.chpl:2: error: variable 'x' is not initialized and has no type
infer1.chpl:3: note: 'x' use here prevents split-init from establishing the type
